--- a/src/app/real-estate/solana/property/Property.module.scss
+++ b/src/app/real-estate/solana/property/Property.module.scss
@@ -50,6 +50,7 @@
         border-top: 1px solid var(--color-background);
         padding: $space-l;
         background-color: rgba($color-black, 1);
+        width: 100%;
       }
     }
 
@@ -110,7 +111,7 @@
   &__ownership {
     &--card {
       margin-top: $space-default;
-      background-color: var(--color-dark-11);
+      background-color: var(--color-background-contrast);
     }
   }
 
