--- a/src/ui/button/Button.module.scss
+++ b/src/ui/button/Button.module.scss
@@ -77,6 +77,11 @@ $HALF_LOADER_SIZE: 15px;
     padding: $space-s 20px;
   }
 
+  &--small {
+    @include font-properties($typography-button-label);
+    padding: 9px 24px;
+  }
+
   // "m" on desktop and "xs" on mobile
 
   &--auto-size {
@@ -115,8 +120,8 @@ $HALF_LOADER_SIZE: 15px;
 
   &--success {
     font-weight: $font-weight-medium;
-    color: $color-white;
-    background: $color-status-ok;
+    color: var(--color-white);
+    background: var(--color-status-success);
 
     svg {
       fill: var(--color-button-secondary-text);
@@ -125,43 +130,43 @@ $HALF_LOADER_SIZE: 15px;
     &:hover,
     &:active,
     &:focus {
-      background: rgba($color-status-ok, 0.9);
+      background: rgba(var(--color-status-success), 0.9);
     }
   }
 
   &--danger {
     font-weight: $font-weight-medium;
-    color: $color-white;
-    background: $color-status-critical;
+    color: var(--color-white);
+    background: var(--color-status-critical);
 
     &:hover,
     &:active,
     &:focus {
-      background: rgba($color-status-critical, 0.9);
+      background: rgba(var(--color-status-critical), 0.9);
     }
   }
 
   &--dark {
     font-weight: $font-weight-medium;
-    color: $color-white;
-    background: $color-dark-1;
+    color: var(--color-white);
+    background: var(--color-dark-1);
 
     &:hover,
     &:active,
     &:focus {
-      background: rgba($color-dark-1, 0.9);
+      background: rgba(var(--color-dark-1), 0.9);
     }
   }
 
   &--light {
     font-weight: $font-weight-medium;
-    color: $color-white;
-    background: $color-dark-5;
+    color: var(--color-white);
+    background: var(--color-dark-5);
 
     &:hover,
     &:active,
     &:focus {
-      background: rgba($color-dark-5, 0.9);
+      background: rgba(var(--color-dark-5), 0.9);
     }
   }
 
@@ -177,13 +182,13 @@ $HALF_LOADER_SIZE: 15px;
       &:active,
       &:hover,
       &:focus {
-        color: $color-brand-bright;
+        color: var(--color-primary)-bright;
         background-color: transparent;
       }
 
       &[disabled] {
-        color: $color-dark-3;
-        background-color: $color-white;
+        color: var(--color-dark-3);
+        background-color: var(--color-white);
       }
     }
 
@@ -197,13 +202,13 @@ $HALF_LOADER_SIZE: 15px;
       }
 
       &[disabled] {
-        color: $color-dark-3;
-        background-color: $color-white;
+        color: var(--color-dark-3);
+        background-color: var(--color-white);
       }
     }
 
     &.button--success {
-      color: $color-status-ok;
+      color: var(--color-status-success);
       background-color: transparent;
 
       &:active,
@@ -213,13 +218,13 @@ $HALF_LOADER_SIZE: 15px;
       }
 
       &[disabled] {
-        color: $color-dark-3;
-        background-color: $color-white;
+        color: var(--color-dark-3);
+        background-color: var(--color-white);
       }
     }
 
     &.button--danger {
-      color: $color-status-critical;
+      color: var(--color-status-critical);
       background-color: transparent;
 
       &:active,
@@ -229,13 +234,13 @@ $HALF_LOADER_SIZE: 15px;
       }
 
       &[disabled] {
-        color: $color-dark-3;
-        background-color: $color-white;
+        color: var(--color-dark-3);
+        background-color: var(--color-white);
       }
     }
 
     &.button--dark {
-      color: $color-dark-1;
+      color: var(--color-dark-1);
       background-color: transparent;
 
       &:active,
@@ -245,13 +250,13 @@ $HALF_LOADER_SIZE: 15px;
       }
 
       &[disabled] {
-        color: $color-dark-3;
-        background-color: $color-white;
+        color: var(--color-dark-3);
+        background-color: var(--color-white);
       }
     }
 
     &.button--light {
-      color: $color-dark-4;
+      color: var(--color-dark-4);
       background-color: transparent;
 
       &:active,
@@ -261,8 +266,8 @@ $HALF_LOADER_SIZE: 15px;
       }
 
       &[disabled] {
-        color: $color-light-2;
-        background-color: $color-white;
+        color: var(--color-dark-1);
+        background-color: var(--color-white);
       }
     }
   }
@@ -311,9 +316,9 @@ $HALF_LOADER_SIZE: 15px;
     &.button--danger,
     &.button--dark {
       &[disabled] {
-        border-color: $color-light-1;
-        color: $color-light-1;
-        background-color: $color-white;
+        border-color: var(--color-dark-1);
+        color: var(--color-dark-1);
+        background-color: var(--color-white);
       }
     }
 
@@ -331,52 +336,52 @@ $HALF_LOADER_SIZE: 15px;
     }
 
     &.button--success {
-      border-color: $color-status-ok;
-      color: $color-status-ok;
+      border-color: var(--color-status-success);
+      color: var(--color-status-success);
 
       &:active,
       &:hover,
       &:focus {
-        color: $color-white;
+        color: var(--color-white);
       }
     }
 
     &.button--danger {
-      border-color: $color-status-critical;
-      color: $color-status-critical;
+      border-color: var(--color-status-critical);
+      color: var(--color-status-critical);
 
       &:active,
       &:hover,
       &:focus {
-        color: $color-white;
+        color: var(--color-white);
       }
     }
 
     &.button--dark {
-      border-color: $color-dark-1;
-      color: $color-dark-1;
+      border-color: var(--color-dark-1);
+      color: var(--color-dark-1);
 
       &:active,
       &:hover,
       &:focus {
-        color: $color-white;
+        color: var(--color-white);
       }
     }
 
     &.button--light {
-      border-color: $color-dark-5;
-      color: $color-dark-5;
+      border-color: var(--color-dark-5);
+      color: var(--color-dark-5);
 
       &:active,
       &:hover,
       &:focus {
-        color: $color-white;
+        color: var(--color-white);
       }
 
       &[disabled] {
-        border-color: $color-light-3;
-        color: $color-light-2;
-        background-color: $color-white;
+        border-color: var(--color-dark-3);
+        color: var(--color-dark-1);
+        background-color: var(--color-white);
       }
     }
   }
@@ -399,7 +404,7 @@ $HALF_LOADER_SIZE: 15px;
     width: $LOADER_SIZE;
     height: $LOADER_SIZE;
     border: $space-xxs solid transparent;
-    border-top: $space-xxs solid $color-white;
+    border-top: $space-xxs solid var(--color-white);
     border-radius: $border-radius-circle;
     animation: spin 2s linear infinite;
   }
@@ -410,7 +415,7 @@ $HALF_LOADER_SIZE: 15px;
     left: calc(50% - #{$HALF_LOADER_SIZE});
     width: $LOADER_SIZE;
     height: $LOADER_SIZE;
-    border: $space-xxs solid $color-white;
+    border: $space-xxs solid var(--color-white);
     border-radius: $border-radius-circle;
     opacity: 0.2;
   }
@@ -426,7 +431,7 @@ $HALF_LOADER_SIZE: 15px;
     }
 
     &[disabled].button--primary.button--loading {
-      background-color: $color-brand;
+      background-color: var(--color-primary);
     }
 
     &[disabled].button--primary.button--outlined.button--loading,
@@ -446,55 +451,55 @@ $HALF_LOADER_SIZE: 15px;
     &[disabled].button--light.button--text.button--loading,
     &[disabled].button--secondary.button--outlined.button--loading,
     &[disabled].button--secondary.button--loading {
-      background-color: $color-white;
+      background-color: var(--color-white);
 
       .button__loader {
-        border-color: $color-dark-1;
+        border-color: var(--color-dark-1);
       }
     }
 
     &[disabled].button--primary.button--outlined.button--loading {
-      border-color: $color-brand;
+      border-color: var(--color-primary);
     }
 
     &[disabled].button--secondary.button--loading {
-      background-color: $color-light-3;
+      background-color: var(--color-dark-3);
     }
 
     &[disabled].button--secondary.button--outlined.button--loading {
-      border-color: $color-light-3;
+      border-color: var(--color-dark-3);
     }
 
     &[disabled].button--success.button--loading {
-      background-color: $color-status-ok;
+      background-color: var(--color-status-success);
     }
 
     &[disabled].button--success.button--outlined.button--loading {
-      border-color: $color-status-ok;
+      border-color: var(--color-status-success);
     }
 
     &[disabled].button--danger.button--loading {
-      background-color: $color-status-critical;
+      background-color: var(--color-status-critical);
     }
 
     &[disabled].button--danger.button--outlined.button--loading {
-      border-color: $color-status-critical;
+      border-color: var(--color-status-critical);
     }
 
     &[disabled].button--dark.button--loading {
-      background-color: $color-dark-1;
+      background-color: var(--color-dark-1);
     }
 
     &[disabled].button--dark.button--outlined.button--loading {
-      border-color: $color-dark-1;
+      border-color: var(--color-dark-1);
     }
 
     &[disabled].button--light.button--loading {
-      background-color: $color-light-1;
+      background-color: var(--color-dark-1);
     }
 
     &[disabled].button--light.button--outlined.button--loading {
-      border-color: $color-dark-5;
+      border-color: var(--color-dark-5);
     }
 
     .button__icon {
