feat: homepage intro & auth-email-form UI

--- a/src/app/auth/sign-up/SignUp.module.scss
+++ b/src/app/auth/sign-up/SignUp.module.scss
@@ -3,6 +3,10 @@
 .sign-up {
   &__instructions {
     margin-bottom: $space-l;
+  }
+
+  &__footer {
+    padding: $space-l 0;
     text-align: center;
   }
 }
