--- a/app/plop-templates/component/Component.module.scss.hbs
+++ b/app/plop-templates/component/Component.module.scss.hbs
@@ -1,5 +1,5 @@
-@import "../../theme/base";
+@import "src/theme/base";
 
 .{{kebabCase name}} {
-  color: var(--color-primary);
+  display: block;
 }
