feat: gets page content media

--- a/app/src/app/business/BusinessDetails/BusinessHeader/BusinessHeader.module.scss
+++ b/app/src/app/business/BusinessDetails/BusinessHeader/BusinessHeader.module.scss
@@ -7,6 +7,7 @@
     display: block;
     background-position: center center;
     background-repeat: no-repeat;
-    background-size: contain;
+    background-size: cover;
+    height: 280px;
   }
 }
