--- a/app/src/ui/tab/navigation/Navigation.module.scss
+++ b/app/src/ui/tab/navigation/Navigation.module.scss
@@ -4,5 +4,5 @@
   display: flex;
   margin-top: $space-m;
   border-bottom: 1px solid var(--color-tab-navigation-border);
-  padding: 0 $main-panel-container-space-x;
+  padding: 0 $space-default;
 }
