feat: invest now widget

--- a/app/src/theme/_variables.scss
+++ b/app/src/theme/_variables.scss
@@ -94,7 +94,7 @@ $font-weight-bold: 700 !default;
 $font-size-headline-1: 4.5rem;
 $font-size-headline-2: rem(40);
 $font-size-headline-3: rem(28);
-$font-size-headline-4: 1.25rem;
+$font-size-headline-4: 1.45rem;
 $font-size-headline-5: rem(24);
 $font-size-headline-6: rem(20);
 $font-size-headline-7: rem(18);
@@ -253,7 +253,7 @@ $gutter-width: $space-default * 2;
 $space-xxs: $space-default / 8 !default;
 $space-xs: $space-default / 4 !default;
 $space-s: $space-default / 2 !default;
-$space-m: $space-default !default;
+$space-m: $space-default * 1.2 !default;
 $space-ml: $space-default * 2 !default;
 $space-l: $space-default * 3 !default;
 $space-xl: $space-default * 4 !default;
