chore: imports icons

--- a/app/src/ui/typography/Typography.module.scss
+++ b/app/src/ui/typography/Typography.module.scss
@@ -28,6 +28,11 @@
     @include normalizeTypography;
     color: var(--color-typography-headline-4);
     margin-bottom: $space-xs;
+
+    [class^="icon-"],
+    [class*=" icon-"] {
+      font-size: $font-size-headline-4 * 0.75;
+    }
   }
 
   &__headline5 {
