--- a/app/src/theme/_base.scss
+++ b/app/src/theme/_base.scss
@@ -82,3 +82,7 @@ $sidebar-width: 320px;
 @mixin noSelect {
   user-select: none;
 }
+
+@mixin boxShadowInset {
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.39), 0 -1px 1px #fff, 0 1px 0 #fff;
+}
