--- a/app/src/app/business/BusinessDetails/InvestNowWidget/InvestNowWidget.module.scss
+++ b/app/src/app/business/BusinessDetails/InvestNowWidget/InvestNowWidget.module.scss
@@ -31,7 +31,7 @@
     padding: $space-default;
     background-color: var(--color-background-contrast);
     border-radius: $border-radius;
-    box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.39), 0 -1px 1px #fff, 0 1px 0 #fff;
+    @include boxShadowInset;
 
     p {
       margin-bottom: 0;
