chore: tooltip enhancements

--- a/app/src/app/business/BusinessDetails/InvestNowWidget/InvestNowWidget.module.scss
+++ b/app/src/app/business/BusinessDetails/InvestNowWidget/InvestNowWidget.module.scss
@@ -20,7 +20,9 @@
     margin-bottom: $space-default;
     h4,
     p {
-      margin-bottom: 0;
+      &:not([class*="title"]) {
+        margin-bottom: 0;
+      }
     }
     p {
       line-height: 1;
