--- a/app/src/ui/typography/Typography.module.scss
+++ b/app/src/ui/typography/Typography.module.scss
@@ -56,6 +56,11 @@
     @include normalizeTypography;
     margin-bottom: $space-s;
     color: var(--color-typography-text);
+
+    [class^="icon-"],
+    [class*=" icon-"] {
+      font-size: $font-size-text * 0.75;
+    }
   }
 
   &__text-lead {
