--- a/app/src/theme/button/_button-outline.scss
+++ b/app/src/theme/button/_button-outline.scss
@@ -4,7 +4,7 @@
   border: 2px solid var(--color-button-primary);
   border-radius: $border-radius-button;
   padding: 11px 22px;
-  color: var(--color-button-primary-text);
+  color: var(--color-primary);
   background-position: center;
   transition: background $duration-slow, border-color $duration-medium, color $duration-medium;
 
