--- a/app/src/ui/card/Card.module.scss
+++ b/app/src/ui/card/Card.module.scss
@@ -14,6 +14,14 @@
 
   &__actions {
     display: flex;
+    border-top: 1px solid var(--color-background-contrast);
+    padding: $space-default;
+
+    > button {
+      &:nth-child(n + 2) {
+        margin-left: $space-default;
+      }
+    }
   }
 
   &__background-image {
