--- a/app/src/app/business/BusinessDetails/BusinessHeader/BusinessHeader.module.scss
+++ b/app/src/app/business/BusinessDetails/BusinessHeader/BusinessHeader.module.scss
@@ -2,7 +2,7 @@
 
 .business-header {
   display: block;
-  margin-top: -$navbar-height + $space-default;
+  margin-top: $space-default;
 
   &__cover-image {
     display: block;
@@ -23,7 +23,9 @@
   }
 
   &__map {
+    width: 100%;
     height: 210px;
+    position: relative;
     background-color: var(--color-dark-3);
   }
 
