--- a/app/src/app/business/BusinessDetails/InvestNowWidget/InvestNowWidget.module.scss
+++ b/app/src/app/business/BusinessDetails/InvestNowWidget/InvestNowWidget.module.scss
@@ -4,7 +4,7 @@
   position: fixed;
   width: 100%;
   z-index: $z-index-navigation;
-  margin-top: -$navbar-height + $space-default;
+  margin-top: $space-default;
 
   &__fixed-col {
     height: 0;
