--- a/app/src/theme/_base.scss
+++ b/app/src/theme/_base.scss
@@ -71,7 +71,7 @@ $sidebar-width: 320px;
 }
 
 @mixin withNavbar {
-  padding-top: $navbar-height * 2;
+  padding-top: $navbar-height;
 }
 
 @mixin normalizeTypography {
