feat: generates checkout experience link #29 #9 (#37)

--- a/app/src/app/auth/sign-up/SignUp.module.scss
+++ b/app/src/app/auth/sign-up/SignUp.module.scss
@@ -1,7 +1,7 @@
-@import "../../../theme/base";
+@import "src/theme/base";
 
 .sign-up {
-  display: block;
+  padding-top: $navbar-height;
 
   &__instructions {
     margin-bottom: $space-m;
