--- a/app/src/app/business/BusinessDetails/InvestNowWidget/InvestNowWidget.module.scss
+++ b/app/src/app/business/BusinessDetails/InvestNowWidget/InvestNowWidget.module.scss
@@ -11,8 +11,15 @@
   }
 
   &__cta-button {
+    display: block;
+
     &--icon {
       margin-left: $space-default;
+    }
+
+    &--error {
+      margin-top: $space-default;
+      color: var(--color-status-critical);
     }
   }
 
