--- a/app/src/app/home/home/Home.module.scss
+++ b/app/src/app/home/home/Home.module.scss
@@ -1,7 +1,7 @@
-@import "../../../theme/base";
+@import "src/theme/base";
 
 .home {
-  display: block;
+  padding-top: $navbar-height;
 
   &__section {
     min-height: 70vh;
