--- a/app/src/ui/business-card/BusinessCard.module.scss
+++ b/app/src/ui/business-card/BusinessCard.module.scss
@@ -1,209 +1,15 @@
 @import "src/theme/base";
 
-$card-border: #e6ebf0;
-$card-background: #ffff;
-$card-subtitle: #898f99;
-
-$card-width: 253px;
-$card-height: 295px;
-$card-default-bottom: 0.2rem;
-
-@mixin withContent {
-  position: relative;
-  top: 120px;
-  height: 500px;
-  display: flex;
-  flex: 1 1 auto;
-  flex-direction: column;
-  padding-right: 1rem;
-  padding-left: 1rem;
-  background: $card-background;
-}
-
-@mixin withInvestmentInfo {
-  position: absolute;
-  left: 0;
-  right: 0;
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-}
-
-@mixin withInvestmentValue {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  flex: 0 0 50%;
-  max-width: 50%;
-  width: 100%;
-  flex-wrap: wrap;
-  align-items: center;
-
-  h5 {
-    font-size: $font-size-5;
-    font-weight: $font-weight-bold;
-    line-height: 1rem;
-    margin-top: 0;
-    margin-bottom: $card-default-bottom;
-  }
-
-  p {
-    font-size: $font-size-3;
-    margin-bottom: $card-default-bottom;
-  }
-}
-
 .business-card {
-  width: $card-width;
-  height: $card-height;
-  overflow: hidden;
-  border-radius: 0.75rem;
-  transition: all 0.12s;
-  border: 1px solid $card-border;
+  cursor: pointer;
 
-  &:hover {
-    box-shadow: $box-shadow-border;
-  }
-
-  &__link {
-    display: block;
-    width: $card-width;
-    height: $card-height;
-    text-decoration: none;
-  }
-
-  &__container {
-    position: relative;
+  &__cover {
+    object-fit: cover;
     width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
+    height: 100px;
   }
 
-  &__header {
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 120px;
-    border-bottom: 1px solid $card-border;
-    background-size: cover;
-    background-position: center center;
-
-    span {
-      position: absolute;
-      top: 8px;
-      right: 8px;
-      color: $card-background;
-      text-align: center;
-      text-transform: uppercase;
-
-      background: #12a14d;
-      border-radius: 4px;
-      font-size: $font-size-mini-button-label;
-      padding: 4px;
-    }
-  }
-
-  &__avatar {
-    display: block;
-    position: relative;
-    width: 66px;
-    height: 66px;
-    margin-left: 1rem;
-    margin-top: -$space-l;
-    border-radius: $border-radius-circle;
-    border: 1px solid $card-border;
-
-    img {
-      min-width: 100%;
-      height: inherit;
-      object-fit: cover;
-    }
-  }
-
-  &__content_static {
-    @include withContent;
-  }
-
-  &__content_expandable {
-    @include withContent;
-    transition: transform $duration-default;
-    transition-timing-function: cubic-bezier(0.7, -0.1, 0.4, 1.4);
-
-    &:hover {
-      transform: translateY(-20%);
-    }
-  }
-
-  &__content-info {
-    margin-bottom: 0;
-  }
-
-  &__general-info {
-    display: block;
-    margin-bottom: 0;
-  }
-
-  &__investment-info {
-    @include withInvestmentInfo;
-    top: 125px;
-  }
-
-  &__investment-info-hidden {
-    @include withInvestmentInfo;
-    top: 180px;
-  }
-
-  &__investment-value-rigth {
-    @include withInvestmentValue;
-
-    border-right: 1px solid $card-border;
-  }
-
-  &__investment-value-left {
-    @include withInvestmentValue;
-  }
-
-  &__title-section {
-    max-height: 4.5rem;
-
-    h4 {
-      position: relative;
-      overflow: hidden;
-      text-overflow: ellipsis;
-      margin-top: 0.5rem;
-    }
-
-    p {
-      display: flex;
-      align-items: center;
-      margin-top: 0.2rem;
-      margin-bottom: $card-default-bottom;
-      font-size: $font-size-2;
-
-      span {
-        height: 1.2rem;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        margin-bottom: 0;
-        color: $card-subtitle;
-        font-weight: $font-weight-regular;
-      }
-    }
-  }
-
-  &__location-icon {
-    margin-right: $card-default-bottom;
-  }
-
-  &__description {
-    height: 35px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    font-size: $font-size-3;
-    line-height: $space-default;
-    margin-bottom: 0.5rem;
+  &__short {
+    text-align: center;
   }
 }
