--- a/app/src/ui/toast/Toast.module.scss
+++ b/app/src/ui/toast/Toast.module.scss
@@ -15,6 +15,11 @@
     display: flex;
     margin-right: $space-m;
     color: var(--color-status-info);
+    font-size: $font-size-headline-3;
+  }
+
+  &__content {
+    padding: 0 $space-default;
   }
 
   &--error {
