--- a/app/src/theme/globals.scss
+++ b/app/src/theme/globals.scss
@@ -123,7 +123,7 @@ body[data-theme="dark"] {
 
 body[data-theme="light"] {
   // Status colors
-  --color-status-info: #0062ff;
+  --color-status-info: #a57ebf;
   --color-status-info-light: #d6f5ff;
   --color-status-info-lighter: #f0fbff;
   --color-status-success: #3dd598;
@@ -153,8 +153,8 @@ body[data-theme="light"] {
   --color-dark-1: #ffffff;
 
   // Brand
-  --color-primary: #4807ea;
-  --color-secondary: var(--color-dark-4);
+  --color-primary: #040c24;
+  --color-secondary: #7fbc94;
 
   // Background
   --color-background: var(--color-white);
