--- a/app/src/theme/_variables.scss
+++ b/app/src/theme/_variables.scss
@@ -81,17 +81,17 @@ $border-radius-button: $border-radius !default;
 //
 // Font, line-height, and color for body text, headings, and more.
 
-$font-family-display: "desire-pro", "quiche-sans", "Helvetica Neue", "Helvetica", Arial, sans-serif !default;
-$font-family-text: "houschka-pro", "input-mono-narrow", "Helvetica Neue", "Helvetica", Arial, sans-serif !default;
+$font-family-display: "quiche-sans", "desire-pro", "Helvetica Neue", "Helvetica", Arial, sans-serif !default;
+$font-family-text: "brother-1816", "houschka-pro", "input-mono-narrow", "Helvetica Neue", "Helvetica", Arial, sans-serif !default;
 $font-family-monospace: "GT America Mono" !default;
 $font-family-base: $font-family-text !default;
 $font-size-base: 16 !default;
-$font-weight-regular: 500 !default;
+$font-weight-regular: 400 !default;
 $font-weight-medium: 600 !default;
 $font-weight-bold: 700 !default;
 
 // Eclipse font sizes
-$font-size-headline-1: 4.5rem;
+$font-size-headline-1: rem(48);
 $font-size-headline-2: rem(40);
 $font-size-headline-3: rem(28);
 $font-size-headline-4: 1.45rem;
@@ -111,7 +111,7 @@ $font-size-mini-description: rem(9);
 $typography-headline-1: (
   font: (
     size: $font-size-headline-1,
-    weight: 400,
+    weight: $font-weight-regular,
     fontFamily: $font-family-display,
     lineHeight: 1,
   ),
@@ -120,8 +120,8 @@ $typography-headline-1: (
 $typography-headline-2: (
   font: (
     size: $font-size-headline-2,
-    weight: $font-weight-bold,
-    fontFamily: $font-family-text,
+    fontFamily: $font-family-display,
+    weight: $font-weight-regular,
     lineHeight: 1,
   ),
 );
@@ -129,8 +129,8 @@ $typography-headline-2: (
 $typography-headline-3: (
   font: (
     size: $font-size-headline-3,
-    weight: $font-weight-bold,
-    fontFamily: $font-family-text,
+    fontFamily: $font-family-display,
+    weight: $font-weight-regular,
     lineHeight: 1,
   ),
 );
@@ -138,17 +138,17 @@ $typography-headline-3: (
 $typography-headline-4: (
   font: (
     size: $font-size-headline-4,
-    weight: $font-weight-medium,
-    fontFamily: $font-family-text,
-    lineHeight: 1,
+    fontFamily: $font-family-display,
+    weight: $font-weight-regular,
+    lineHeight: 1.3,
   ),
 );
 
 $typography-headline-5: (
   font: (
     size: $font-size-headline-5,
-    weight: $font-weight-bold,
-    fontFamily: $font-family-text,
+    fontFamily: $font-family-display,
+    weight: $font-weight-regular,
     lineHeight: 1,
   ),
 );
@@ -156,10 +156,9 @@ $typography-headline-5: (
 $typography-headline-6: (
   font: (
     size: $font-size-headline-6,
-    weight: $font-weight-medium,
-    fontFamily: $font-family-text,
+    fontFamily: $font-family-display,
+    weight: $font-weight-regular,
     lineHeight: 1,
-    transform: uppercase,
     color: var(--color-typography-headline-6),
   ),
 );
@@ -177,7 +176,7 @@ $typography-text-lead: (
   font: (
     size: $font-size-text-lead,
     weight: $font-weight-regular,
-    fontFamily: $font-family-text,
+    fontFamily: $font-family-display,
     lineHeight: 1.5,
   ),
 );
@@ -193,7 +192,7 @@ $typography-text-bold: (
 $typography-subtitle: (
   font: (
     size: $font-size-subtitle,
-    weight: $font-weight-medium,
+    weight: $font-weight-bold,
     fontFamily: $font-family-text,
   ),
 );
@@ -201,7 +200,7 @@ $typography-subtitle: (
 $typography-button-label: (
   font: (
     size: $font-size-button-label,
-    weight: $font-weight-medium,
+    weight: $font-weight-bold,
     fontFamily: $font-family-text,
   ),
 );
@@ -209,7 +208,7 @@ $typography-button-label: (
 $typography-mini-button-label: (
   font: (
     size: $font-size-mini-button-label,
-    weight: $font-weight-medium,
+    weight: $font-weight-bold,
     fontFamily: $font-family-text,
   ),
 );
