feat(campaigns-grid): adding improvements in CampaignsGroup and related

--- a/app/src/app/campaigns-grid/CampaignsGroup/CampaignsGroup.module.scss
+++ b/app/src/app/campaigns-grid/CampaignsGroup/CampaignsGroup.module.scss
@@ -1,5 +1,13 @@
 @import "src/theme/base";
 
 .campaigns-group {
-  display: block;
+  padding: $space-s;
+
+  &__line {
+    overflow-x: scroll;
+  }
+
+  &__collection {
+    overflow-y: scroll;
+  }
 }
