chore: couple of styling enhancements

--- a/app/src/app/campaigns-grid/CampaignsGroup/CampaignsGroup.module.scss
+++ b/app/src/app/campaigns-grid/CampaignsGroup/CampaignsGroup.module.scss
@@ -1,7 +1,7 @@
 @import "src/theme/base";
 
 .campaigns-group {
-  padding: $space-s;
+  padding: $space-m 0;
 
   &__line {
     overflow-x: scroll;
